@@ -2084,11 +2084,9 @@ __GMP_DECLSPEC void __gmp_assert_fail __GMP_PROTO ((const char *, int, const cha
 #endif
 
 
-#if HAVE_NATIVE_mpn_com_n
-#define mpn_com_n __MPN(com_n)
-__GMP_DECLSPEC void    mpn_com_n __GMP_PROTO ((mp_ptr, mp_srcptr, mp_size_t));
-#else
-#define mpn_com_n(d,s,n)                                \
+#if ! HAVE_NATIVE_mpn_com
+#undef mpn_com
+#define mpn_com(d,s,n)                                  \
   do {                                                  \
     mp_ptr     __d = (d);                               \
     mp_srcptr  __s = (s);                               \
