@@ -1325,7 +1325,7 @@ define_mpn(bdiv_q_1)
 define_mpn(pi1_bdiv_q_1)
 define_mpn(bdiv_dbm1c)
 define_mpn(cmp)
-define_mpn(com_n)
+define_mpn(com)
 define_mpn(copyd)
 define_mpn(copyi)
 define_mpn(count_leading_zeros)
@@ -1376,7 +1376,7 @@ define_mpn(popcount)
 define_mpn(preinv_divrem_1)
 define_mpn(preinv_mod_1)
 define_mpn(nand_n)
-define_mpn(neg_n)
+define_mpn(neg)
 define_mpn(nior_n)
 define_mpn(powm)
 define_mpn(powlo)
